# TC

./: README.md  app.txt  hooks.py  pyproject.toml
TC_Mobile/: .gitignore  README.md  app.json  package-lock.json  package.json  tailwind.config.js
TC_Mobile/app/: change_plan.js  index.js
TC_Mobile/app/(tabs)/: _layout.js  cases.js  dashboard.js  home.js
TC_Mobile/lib/: api.ts
tc_system/: api.py  hooks.py  modules.txt  patches.txt
tc_system/doctype/installation_appointment/: installation_appointment.json  installation_appointment.py
tc_system/doctype/ops_exception/: ops_exception.json  ops_exception.py
tc_system/doctype/refund_request/: refund_request.json  refund_request.py
tc_system/doctype/tc_case/: tc_case.json  tc_case.py
tc_system/doctype/tc_subscription_request/: __init__.py  tc_subscription_request.json  tc_subscription_request.py
tc_system/integrations/: api_client.py
tc_system/jobs/: event_processor.py  scheduler.py
tc_system/patches/: clean_navbar.py  force_admin_reset.py  set_branding.py
tc_system/print_format/installation_order/: installation_order.html  installation_order.json
tc_system/public/css/: tc_system.css
tc_system/public/js/: tc_system.js  tc_system_v2.js
tc_system/report/cases_by_status/: cases_by_status.json
tc_system/tests/: test_case.py  test_refund.py
tc_system/workspace/telecom_cambodia_operations/: telecom_cambodia_operations.json
tc_system/www/: index.html  index.py
